[tool.poetry]
name = "ar_pong"
version = "0.1.0"
description = ""
authors = ["Kevin Boyer <kevinjboyer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyglet = "^1.5.22"
opencv-contrib-python = "^4.5.5"
mediapipe = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.941"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
